# evos

./: LICENSE.txt  README.md  pyproject.toml
src/evos/benchmarking/: __init__.py  _search_then_preq.py  display.py
src/evos/clustering/: __init__.py  _autocloud.py  _cedas.py  _esbm4clus.py  _macro_sostream.py  _mcmststream.py  _microtedaclus.py  _oec.py  _sostream.py  display.py  river.py
src/evos/core/: distance.py  incremental.py  loss.py  similarity.py  statistical.py  utils.py
src/evos/datasets/: __init__.py  datasource.py
